--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "fcc-learn-npm-package-json",
-	"author": "Saftta Antoneta",
+	"author": "Safta Antoneta",
 	"dependencies": {
 	  "express": "^4.14.0"
 	},
