--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "Safta Antoneta",
 	"description": "A project that I will learn something about npm",
 	"keywords": [ "skill", "related", "freecodecamp" ],
+	"license": "MIT",
 	"dependencies": {
 	  "express": "^4.14.0"
 	},
