--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "A project that I will learn something about npm",
 	"keywords": [ "skill", "related", "freecodecamp" ],
 	"license": "MIT",
+	"version": "1.2.0",
 	"dependencies": {
 	  "express": "^4.14.0"
 	},
